Fix blockquote style on mobile

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -83,7 +83,6 @@ blockquote {
     position: relative;
 }
 
-
 blockquote::before {
     content: "";
     position: absolute;
@@ -105,6 +104,18 @@ blockquote::after {
     margin-left: -35px;
     font-weight: 500;
     font-family: 'Alegreya Sans';
+}
+
+@media (max-width: 768px) {
+    blockquote {
+        font-size: 1.2em;
+        padding: 2em 1em 1em;
+    }
+
+    blockquote::before {
+        margin-left: -2.5em;
+        width: 4em;
+    }
 }
 
 ul, ol {
